fix swagger recordsh model
