# server/docs/swagger.yaml
@@ -1,26 +1,36 @@
 basePath: /api/v1
 definitions:
-  models.Record:
+  ent.RecordSh:
     properties:
       id:
+        description: ID of the ent.
         type: string
       improvement:
+        description: Improvement holds the value of the "improvement" field.
         type: string
       map_name:
+        description: MapName holds the value of the "map_name" field.
         type: string
       player_id:
+        description: PlayerID holds the value of the "player_id" field.
         type: string
       player_name:
+        description: PlayerName holds the value of the "player_name" field.
         type: string
       server:
+        description: Server holds the value of the "server" field.
         type: string
       time:
+        description: Time holds the value of the "time" field.
         type: string
       timestamp:
+        description: Timestamp holds the value of the "timestamp" field.
         type: string
       track:
+        description: Track holds the value of the "track" field.
         type: integer
       type:
+        description: Type holds the value of the "type" field.
         type: string
     type: object
 host: localhost:8080
@@ -45,7 +55,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Record'
+              $ref: '#/definitions/ent.RecordSh'
             type: array
       summary: get all records for all bonuses
       tags:
@@ -70,7 +80,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Record'
+              $ref: '#/definitions/ent.RecordSh'
             type: array
       summary: get all records for specific bonus
       tags:
@@ -90,7 +100,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Record'
+              $ref: '#/definitions/ent.RecordSh'
             type: array
       summary: get all records for map by map name
       tags:
@@ -110,7 +120,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Record'
+              $ref: '#/definitions/ent.RecordSh'
             type: array
       summary: get all records for all stages
       tags:
@@ -135,7 +145,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Record'
+              $ref: '#/definitions/ent.RecordSh'
             type: array
       summary: get all records for specific stage
       tags:
